fixing footer on mobile

--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -64,6 +64,6 @@ footer {
     }
 
     footer {
-        padding-top: 350px;
+        padding-top: 260px;
     }
 }
